Refactor and added comments

--- a/concrete_abstract_classifier.ipynb
+++ b/concrete_abstract_classifier.ipynb
@@ -6,8 +6,9 @@
     "## Train a classifier to classify words as concrete or abstract\n",
     "\n",
     "1. Load words with concreteness score from xls file\n",
-    "2. Train a classifier to classify words as concrete or abstract\n",
-    "3. Save the classifier"
+    "2. Train a classifier to classify words as concrete or abstract and save it in a file\n",
+    "\n",
+    "We also created a regression model to predict the concreteness score of a word."
    ],
    "metadata": {
     "collapsed": false
@@ -16,16 +17,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 1,
    "id": "57a5d9a6bbd6699",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-04-17T09:38:46.831929900Z",
-     "start_time": "2024-04-17T09:38:45.624950900Z"
+     "end_time": "2024-04-24T10:40:20.217468Z",
+     "start_time": "2024-04-24T10:40:08.429960100Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001B[38;5;2m✔ Download and installation successful\u001B[0m\n",
+      "You can now load the package via spacy.load('en_core_web_md')\n",
+      "\u001B[38;5;3m⚠ Restart to reload dependencies\u001B[0m\n",
+      "If you are in a Jupyter or Colab notebook, you may need to restart Python in\n",
+      "order to load all the package's dependencies. You can do this by selecting the\n",
+      "'Restart kernel' or 'Restart runtime' option.\n"
+     ]
+    }
+   ],
    "source": [
     "import os.path\n",
     "\n",
@@ -40,8 +54,7 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error, accuracy_score, classification_report\n",
     "\n",
-    "\n",
-    "# spacy.cli.download(\"en_core_web_md\")\n",
+    "spacy.cli.download(\"en_core_web_md\")\n",
     "nlp = spacy.load(\"en_core_web_md\")"
    ]
   },
@@ -61,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "concreteness_df = pd.read_excel(\"data/brysbaert_concreteness_ratings.xlsx\", na_filter=False)\n",
@@ -72,8 +85,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T09:38:50.341927900Z",
-     "start_time": "2024-04-17T09:38:46.834930100Z"
+     "end_time": "2024-04-24T10:40:23.812479600Z",
+     "start_time": "2024-04-24T10:40:20.219471900Z"
     }
    },
    "id": "225e196be864a6ef"
@@ -81,8 +94,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Create file containing each word and its vector representation as a dictionary.\n",
-    "If the file already exists, load it instead of creating a new one."
+    "Create a file containing each word and its vector representation as a dictionary. If the file already exists, load it instead of creating a new one.\n",
+    "This is done to avoid recomputing the word vectors each time the script is run, which is time-consuming because we have to process a large number of words. Moreover, this data is saved in a dictionary format, which is more efficient to access."
    ],
    "metadata": {
     "collapsed": false
@@ -91,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "if not os.path.exists(\"data/concreteness_word_vectors.txt\"):\n",
@@ -111,15 +124,25 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T09:38:55.074946200Z",
-     "start_time": "2024-04-17T09:38:50.341927900Z"
+     "end_time": "2024-04-24T10:40:28.342954700Z",
+     "start_time": "2024-04-24T10:40:23.818469Z"
     }
    },
    "id": "7b89c3ae8a830e76"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Print the number of concrete and abstract words and the first 10 words in each list."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "22adc431177c8c56"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -143,8 +166,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T09:38:55.097929700Z",
-     "start_time": "2024-04-17T09:38:55.078986200Z"
+     "end_time": "2024-04-24T10:40:28.361946800Z",
+     "start_time": "2024-04-24T10:40:28.345956400Z"
     }
    },
    "id": "initial_id"
@@ -164,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "classes = ['concrete', 'abstract']\n",
@@ -173,8 +196,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T09:38:55.136927400Z",
-     "start_time": "2024-04-17T09:38:55.094928500Z"
+     "end_time": "2024-04-24T10:40:28.403944700Z",
+     "start_time": "2024-04-24T10:40:28.361946800Z"
     }
    },
    "id": "f64c50482e1361b"
@@ -183,7 +206,7 @@
    "cell_type": "markdown",
    "source": [
     "Convert the words to word vectors using spaCy to get a more meaningful representation of the words.\n",
-    "Preparing labels for the words. Words with concreteness score >= 3 are labeled as 0 (concrete), while words with concreteness score < 3 are labeled as 1 (abstract).\n",
+    "Preparing labels for the words: words with concreteness score >= 3 are labeled as 0 (concrete), while words with concreteness score < 3 are labeled as 1 (abstract).\n",
     "We now have a training set with word vectors and their corresponding labels."
    ],
    "metadata": {
@@ -193,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "# create word vector list\n",
@@ -210,8 +233,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T09:38:55.150928900Z",
-     "start_time": "2024-04-17T09:38:55.122928Z"
+     "end_time": "2024-04-24T10:40:28.414944200Z",
+     "start_time": "2024-04-24T10:40:28.375944800Z"
     }
    },
    "id": "d4a534c8fe6ed123"
@@ -228,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
@@ -238,8 +261,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T09:38:57.641928900Z",
-     "start_time": "2024-04-17T09:38:55.140928700Z"
+     "end_time": "2024-04-24T10:40:31.017950300Z",
+     "start_time": "2024-04-24T10:40:28.407991500Z"
     }
    },
    "id": "40ecc9c6fe434588"
@@ -256,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -282,34 +305,43 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T09:38:57.819948200Z",
-     "start_time": "2024-04-17T09:38:57.642928300Z"
+     "end_time": "2024-04-24T10:40:31.208968300Z",
+     "start_time": "2024-04-24T10:40:31.018948800Z"
     }
    },
    "id": "5576feb91af03727"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Save the classifier to a file to use it later."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f5701c36c758af6a"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
       "text/plain": "['trained_models/concrete_abstract_classifier.joblib']"
      },
-     "execution_count": 100,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# save classifier\n",
     "joblib.dump(classifier, \"trained_models/concrete_abstract_classifier.joblib\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T09:38:57.830928700Z",
-     "start_time": "2024-04-17T09:38:57.816928300Z"
+     "end_time": "2024-04-24T10:40:31.218945100Z",
+     "start_time": "2024-04-24T10:40:31.203944900Z"
     }
    },
    "id": "289a2d38fd4e8bbc"
@@ -325,25 +357,44 @@
    "id": "93c4aae414bc1f48"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Load the classifier"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c5c6d7bbc4d95093"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 10,
    "outputs": [],
    "source": [
-    "# load classifier\n",
     "classifier = joblib.load(\"trained_models/concrete_abstract_classifier.joblib\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T09:38:57.876340Z",
-     "start_time": "2024-04-17T09:38:57.834929100Z"
+     "end_time": "2024-04-24T10:40:31.279945500Z",
+     "start_time": "2024-04-24T10:40:31.225946Z"
     }
    },
    "id": "7a3b08270fb04f2b"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Test the classifier with some words extracted from WordNet synsets."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "129d6375903c7ab9"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -364,17 +415,17 @@
     "\n",
     "for synset_str in synsets:\n",
     "    synset = wn.synset(synset_str)\n",
-    "    synset_name = synset.lemma_names()[0]\n",
-    "    synset_vector = list(nlp(synset_name))[0].vector\n",
+    "    synset_common_word = synset.lemma_names()[0]\n",
+    "    synset_vector = list(nlp(synset_common_word))[0].vector\n",
     "    synset_class = classifier.predict([synset_vector])[0]\n",
     "    # print classification\n",
-    "    print(f'{synset_name} -> {synset_class} - {classes[synset_class]}')"
+    "    print(f'{synset_common_word} -> {synset_class} - {classes[synset_class]}')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T09:38:57.897337500Z",
-     "start_time": "2024-04-17T09:38:57.849280700Z"
+     "end_time": "2024-04-24T10:40:32.757801300Z",
+     "start_time": "2024-04-24T10:40:31.251944800Z"
     }
    },
    "id": "acbb37d7f68c49e9"
@@ -384,7 +435,7 @@
    "source": [
     "### 3. Regression model version\n",
     "\n",
-    "We predict now the concreteness score of a word"
+    "We now create a regression model to predict the concreteness score of a word instead of classifying it as concrete or abstract."
    ],
    "metadata": {
     "collapsed": false
@@ -392,8 +443,20 @@
    "id": "98b8c7d266c6c756"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### 3.1. Prepare the data\n",
+    "\n",
+    "We use the same data as before, but this time we use the concreteness score as the target variable."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "17ca4ac1f498ce2f"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "words = concreteness_df['word'].tolist()\n",
@@ -409,15 +472,25 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T09:38:57.930280300Z",
-     "start_time": "2024-04-17T09:38:57.909282600Z"
+     "end_time": "2024-04-24T10:40:32.814801Z",
+     "start_time": "2024-04-24T10:40:32.753808800Z"
     }
    },
    "id": "d53f519a9986332"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Print the first 10 words along with their concreteness scores"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c6fd2161f6678884"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -437,22 +510,59 @@
     }
    ],
    "source": [
-    "# print the first 10 words alog with their concreteness scores\n",
     "for i in range(10):\n",
     "    print(f'{words[i]} -> {y[i]}')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T09:38:57.942304100Z",
-     "start_time": "2024-04-17T09:38:57.927290100Z"
+     "end_time": "2024-04-24T10:40:32.823759400Z",
+     "start_time": "2024-04-24T10:40:32.785804700Z"
     }
    },
    "id": "d37d804e183e5917"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### 3.2. Train the regression model"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "876cfd8fd988abc4"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 14,
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "model = LinearRegression().fit(X_train, y_train)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-24T10:40:33.608448900Z",
+     "start_time": "2024-04-24T10:40:32.802809500Z"
+    }
+   },
+   "id": "4e2a2b8d1a8e7f99"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### 3.3. Evaluate and save the regression model"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e30a03b36364ab8"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
@@ -463,10 +573,6 @@
     }
    ],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
-    "\n",
-    "model = LinearRegression().fit(X_train, y_train)\n",
-    "\n",
     "y_pred = model.predict(X_test)\n",
     "mse = mean_squared_error(y_test, y_pred)\n",
     "print(f'Mean Squared Error: {mse}')"
@@ -474,34 +580,33 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T09:38:58.762280300Z",
-     "start_time": "2024-04-17T09:38:57.945280600Z"
+     "end_time": "2024-04-24T10:40:33.766472Z",
+     "start_time": "2024-04-24T10:40:33.607449100Z"
     }
    },
-   "id": "4e2a2b8d1a8e7f99"
+   "id": "3a7cb95a08a0a599"
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
       "text/plain": "['trained_models/concreteness_regression_model.joblib']"
      },
-     "execution_count": 106,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# save model\n",
     "joblib.dump(model, \"trained_models/concreteness_regression_model.joblib\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T09:38:58.806940300Z",
-     "start_time": "2024-04-17T09:38:58.764293800Z"
+     "end_time": "2024-04-24T10:40:33.784449800Z",
+     "start_time": "2024-04-24T10:40:33.767452100Z"
     }
    },
    "id": "d4faab236c28c2be"
